--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Halloween_LoadImage</title>
+		<title>Halloween</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <Halloween_LoadImage>
-		    Footer
+		    ..
 	    </footer>
 	</body>
 </html>
